# opensovd-mdd-ui

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS  Cargo.toml  README.md  REUSE.toml  build.rs  clippy.toml  deny.toml  make_icon.swift  ruff.toml  taplo.toml  tauri.conf.json
.github/: copilot-instructions.md
.github/actions/install-linux-deps/: action.yml
.github/workflows/: build.yml  pr-checks.yml  pre-commit.yaml  release.yml
.reuse/: styles.toml
.reuse/templates/: mdd_ui.jinja2
capabilities/: default.json
frontend/: .prettierrc  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/api/: commands.ts
frontend/src/components/: ByteGridView.vue  DetailPane.vue  LlmPanel.vue  SearchBar.vue  SettingsPanel.vue  StatusBar.vue  TreePane.vue
frontend/src/stores/: app.ts  llm.ts  settings.ts
icons/: icon.icns
icons/android/mipmap-anydpi-v26/: ic_launcher.xml
icons/android/values/: ic_launcher_background.xml
src/: commands.rs  llm.rs  main.rs
src/mcp/: mod.rs
src/mdd-core/: Cargo.toml
src/mdd-core/src/: lib.rs
src/mdd-core/src/database/: mod.rs  reader.rs
src/mdd-core/src/diff/: compare.rs  diff_tree.rs  export.rs  mod.rs  snapshot.rs
src/mdd-core/src/tree/: builder.rs  mod.rs  types.rs
src/mdd-core/src/tree/elements/: layers.rs  mod.rs
src/mdd-core/src/tree/elements/variants/: com_params.rs  functional_classes.rs  mod.rs  params.rs  parent_refs.rs  placeholders.rs  requests.rs  responses.rs  sdgs.rs  state_charts.rs  tables.rs  unit_spec.rs
src/mdd-core/src/tree/elements/variants/dops/: dtc_dops.rs  dynamic_length_fields.rs  end_of_pdu.rs  env_data.rs  mod.rs  mux_dops.rs  normal_dops.rs  static_fields.rs  structures.rs
src/mdd-core/src/tree/elements/variants/services/: details.rs  diag_comms.rs  mod.rs
src/mdd-core/src/uds/: byte_pattern.rs  mod.rs  translator.rs
