# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[workspace]
members = ["src/mdd-core"]
default-members = ["."]

[workspace.lints.clippy]
# enable pedantic
pedantic = { level = "deny", priority = -1 }
## exclude some too pedantic lints for now
similar_names = { level = "allow" }

# additional lints
clone_on_ref_ptr = { level = "deny" }
indexing_slicing = { level = "deny" }
unwrap_used = { level = "deny" }
arithmetic_side_effects = { level = "deny" }
separated_literal_suffix = { level = "deny" }
string_slice = { level = "deny" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

[package]
name = "mdd-ui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:tokio"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mdd-core = { path = "src/mdd-core" }

# Desktop UI
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (GHE device flow + LLM API)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP server (optional)
rmcp = { version = "1.5", features = [
  "server",
  "transport-io",
  "macros",
], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[patch.crates-io]
flatbuffers = { git = "https://github.com/alexmohr/flatbuffers.git", rev = "0ba3307d" }

[lints]
workspace = true
