# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "mdd-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
cda-core = { git = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter.git", rev = "434a5b50d038b0f5875938daabb3d338026fdd4b" }
cda-database = { git = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter.git", rev = "434a5b50d038b0f5875938daabb3d338026fdd4b" }
cda-interfaces = { git = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter.git", rev = "434a5b50d038b0f5875938daabb3d338026fdd4b" }
cda-plugin-security = { git = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter.git", rev = "434a5b50d038b0f5875938daabb3d338026fdd4b" }

# Error handling
anyhow = "1"

# Serialization (for Tauri command return types)
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

[lints]
workspace = true
